# pecan

./: Cargo.toml  design.md
benchmark/: Cargo.toml
benchmark/src/: benchmarks.rs  benchmarks_pb.rs  datasets.rs  google_size_pb.rs  main.rs
benchmark/src/benchmarks/: benchmarks_pb.rs  proto3.rs
benchmark/src/datasets/: google_message1.rs  google_message2.rs  google_message3.rs  google_message4.rs
compiler/: Cargo.toml
compiler/src/: context.rs  db.rs  descriptor.rs  field.rs  generator.rs  lib.rs  main.rs  message.rs  options_pb.rs  plugin_pb.rs  util.rs
conformance/: Cargo.toml
conformance/src/: conformance.rs  conformance_pb.rs  lib.rs  main.rs
conformance/src/conformance/: conformance_pb.rs
conformance/src/google/: protobuf.rs
descriptor/: Cargo.toml
descriptor/src/google/: protobuf.rs
pecan/: Cargo.toml
pecan/src/: codec.rs  error.rs  extension.rs  lib.rs  message.rs  reflection.rs  stream.rs
pecan/src/reflection/: descriptor_pb.rs
pecan/src/stream/: field.rs
proto/datasets/google_message3/: benchmark_message3_2.proto
proto/google/protobuf/: descriptor.proto  test_messages_proto2.proto  test_messages_proto3.proto
src/: codec.rs  enumerate.rs  error.rs  lib.rs  message.rs  stream.rs
src/google/protobuf/: descriptor.rs  mod.rs
src/stream/: input.rs  output.rs
types/: Cargo.toml
types/proto/pecan/: options.proto
types/src/: lib.rs  pecan.rs
types/src/google/: protobuf.rs
types/src/pecan/: options_pb.rs
utils/: Cargo.toml
utils/src/: codec.rs  lib.rs  naming.rs
xtask/src/: main.rs
(+43 files in other folders)
