[package]
name = "pecan"
version = "0.1.0"
authors = ["Jay Lee <BusyJayLee@gmail.com>"]
edition = "2018"

[dependencies]
pecan-utils = { path = "utils" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
bytes = "0.5"

[[bench]]
name = "varint"
harness = false

[workspace]
members = [
    "compiler",
    "descriptor",
    "utils",
]

[profile.bench]
codegen-units = 1