[package]
name = "pecan"
version = "0.1.0"
authors = ["Jay Lee <BusyJayLee@gmail.com>"]
edition = "2018"

[dependencies]
pecan-utils = { path = "utils" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
bytes = "0.5"

[workspace]
members = [
    "benchmark",
    "compiler",
    "conformance",
    "descriptor",
    "utils",
]

[profile.release]
codegen-units = 1
debug = true

[profile.bench]
codegen-units = 1
debug = true